# PhyriadFG

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build-release.bat  build.bat
bench/: nvofa_bench.cpp
bench/copy_bench/: main.cpp
bench/gme_fit_bench/: main.cpp
docs/: ARCHITECTURE.md  BENCHMARKS.md  PHYRIADFG_DEPS_INTERACTIVE.html  PHYRIADFG_STRUCTURE_DEPS.tex  SEPARATION_PLAN.md  STEP5_FGCONTEXT_PLAN.md
docs/diagrams/: phyriadfg_multigpu.tex  phyriadfg_pipeline.tex
docs/research/: AYAMA_LAYERED_FG_IMPLEMENTATION_STRATEGIES.md  AYAMA_LAYERED_FG_MASTER_PLAN.md  CAPTURE_LAYER_IMPLEMENTATION_STRATEGIES.md  CAPTURE_LAYER_MASTER_PLAN.md  CAPTURE_LAYER_RISK_REGISTER.md  COPY_FENCE_DATAFLOW_MASTER_PLAN.md  DEVICE_LOST_RECOVERY_RISK_REGISTER.md  FG_ADAPTIVE_FLOWSCALE_DESIGN.md  FG_ADAPTIVE_FLOWSCALE_RISK_REGISTER.md  FG_ARCHITECTURE_DCAD_MASTER_PLAN.md  FG_CADENCE_LATENCY_PRIOR_ART.md  FG_COMPATIBILITY_COVERAGE_PRIOR_ART.md  FG_COMPATIBILITY_IMPLEMENTATION_STRATEGIES.md  FG_COMPATIBILITY_MASTER_PLAN.md  FG_COMPETITIVE_COMPARISON.md  FG_CONTROLPLANE_SECURITY_PLAN_IMPLEMENTATION_STRATEGIES.md  FG_CONTROLPLANE_SECURITY_PLAN_MASTER_PLAN.md  FG_CONTROLPLANE_SECURITY_PLAN_RISK_REGISTER.md  FG_CONTROLPLANE_SECURITY_PRIOR_ART.md  FG_FLUIDITY_FIX_IMPLEMENTATION_STRATEGIES.md  FG_FLUIDITY_FIX_MASTER_PLAN.md  FG_FLUIDITY_FIX_RISK_REGISTER.md  FG_FLUIDITY_PACING_SOTA.md  FG_HDR_FORMAT_PRIOR_ART.md  FG_HDR_PIPELINE_IMPLEMENTATION_STRATEGIES.md  FG_HDR_PIPELINE_MASTER_PLAN.md  FG_HDR_PIPELINE_RISK_REGISTER.md  FG_LSFG_HEADTOHEAD_MEASURED.md  FG_MEASUREMENT_METHODOLOGY_PRIOR_ART.md  FG_NVOFA_PRIOR_ART.md  FG_OPEN_ALTERNATIVES_PRIOR_ART.md  FG_OPTION_A_IMPLEMENTATION_STRATEGIES.md  FG_OPTION_A_MASTER_PLAN.md  FG_OPTION_A_RISK_REGISTER.md  FG_PARALLEL_INSTANCES_IMPLEMENTATION_STRATEGIES.md  FG_PARALLEL_INSTANCES_MASTER_PLAN.md  FG_PARALLEL_INSTANCES_RISK_REGISTER.md  FG_PERCEPTUAL_EVAL_SOTA.md  FG_PRESENT_PACING_DESIGN.md  FG_PRESENT_TARGET_PACER_IMPLEMENTATION_STRATEGIES.md  (+50 more)
docs/research/ongoing/: HSR120_THROUGHPUT_DIAGNOSIS.md  RENDER_ASSISTANT_KICKOFFS.md  STAGE39_OUTPUT_CLOCK_DESIGN.md
docs/slides/: PHYRIADFG_ARCHITECTURE_SLIDES.tex
framework/hal/include/phyriad/hal/: Arch.hpp  Cacheline.hpp  CpuWait.hpp  MemoryOrder.hpp  Simd.hpp  Timestamp.hpp
framework/render/present/include/phyriad/render/present/: PresentSurface.hpp
framework/render/present/src/: PresentSurface.cpp
framework/render/vulkan/cmake/: spv_to_header.cmake
framework/render/vulkan/include/phyriad/render/vulkan/: OpticalFlowPipeline.hpp
framework/render/vulkan/shaders/: optical_flow_affine_fit.comp  optical_flow_hier_match.comp  optical_flow_hier_match_fg.comp  optical_flow_pyr_down.comp  optical_flow_warp.comp
framework/render/vulkan/src/: OpticalFlowPipeline.cpp
framework/schema/include/phyriad/schema/: Error.hpp
framework/topology/include/phyriad/topology/: CacheInfo.hpp  CpuFeatures.hpp  HardwareTopology.hpp  HybridCoreDetector.hpp  PCIeAffinityProbe.hpp  VCacheDetector.hpp
framework/topology/src/: CacheInfo.cpp  HardwareTopology.cpp  HybridCoreDetector.cpp  PCIeAffinityProbe.cpp  VCacheDetector.cpp
shaders/: gme_dissidence.comp  gme_reduce.comp  gme_solve.comp  hdr_convert.comp  igpu_convert_pack.comp  igpu_field.comp  mv_median.comp  mv_smooth.comp  nvofa_convert.comp  overlay_fps.comp  unpack_packed.comp  upscale_bilinear.comp  upscale_lanczos.comp  wap_fill.comp  wap_warp.comp
src/capture/: capture.cpp  capture.hpp  wgc_ctx.hpp
src/cli/: cli.cpp  cli.hpp
src/core/: compat_reason.hpp  device.cpp  device.hpp  fg_context.hpp  globals.cpp  globals.hpp  main.cpp  ra_simd.cpp  ra_simd.hpp  telemetry_csv.hpp  vk_util.cpp  vk_util.hpp
src/flow/: flow.cpp  flow.hpp
src/instrument/: instrument.cpp  instrument.hpp
src/present/: present.cpp  present.hpp
src/warp_blend/: warp_blend.cpp  warp_blend.hpp
tools/capture_dump/: README.md  main.cpp
ui/: package-lock.json  package.json  run.bat
ui/src/: index.html  main.js  styles.css
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/src/: lib.rs  main.rs
